Fixing margins for CSS to look nice on smaller screens. Also adding work experience and some projects to make the profile nicer.

--- a/assets/stylesheets/evan.css
+++ b/assets/stylesheets/evan.css
@@ -65,6 +65,9 @@ p {
     width: auto;
 }
 
+.experience_and_projects {
+    text-align: center;
+}
 
 @media screen and (max-width: 1450px){
     .row {
